keyboard: use the new data in wlr_keyboard_set_keymap()

Fixes: https://gitlab.freedesktop.org/wlroots/wlroots/-/issues/3647